# LearningCMake

./: .gitignore  CMakeLists.txt  CMakeSettings.json  GenerateProject.bat  README.md
Application/: CMakeLists.txt
Application/src/: main.cpp
GameLib/: CMakeLists.txt
GameLib/inc/: Game.h
GameLib/src/: Game.cpp
Lesson1/: CMakeLists.txt
Lesson1/src/: main.cpp
src/: main.cpp
tests/: CMakeLists.txt  test.cpp
